# AscendNPU-IR

./: .gitignore  .gitmodules  BUILD_GUIDE.md  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE  OWNERS  README.md  README_zh.md
bishengir/include/bishengir/Dialect/: CMakeLists.txt
bishengir/lib/Conversion/: CMakeLists.txt
bishengir/lib/Conversion/ArithToAffine/: ArithToAffine.cpp  CMakeLists.txt
bishengir/lib/Conversion/ArithToHFusion/: ArithToHFusion.cpp  CMakeLists.txt
bishengir/lib/Conversion/GPUToHFusion/: CMakeLists.txt  GPUToHFusion.cpp
bishengir/lib/Conversion/HFusionToHIVM/: CMakeLists.txt  HFusionToHIVM.cpp  Matmul.cpp  Reduction.cpp  Utils.cpp
bishengir/lib/Conversion/LinalgToHFusion/: CMakeLists.txt  LinalgToHFusion.cpp
bishengir/lib/Conversion/LowerMemRefExt/: CMakeLists.txt  LowerMemRefExt.cpp
bishengir/lib/Conversion/MathToHFusion/: CMakeLists.txt  MathToHFusion.cpp
bishengir/lib/Conversion/TensorToHFusion/: CMakeLists.txt  TensorToHFusion.cpp
bishengir/lib/Conversion/TensorToHIVM/: CMakeLists.txt  TensorToHIVM.cpp
bishengir/lib/Conversion/TorchToHFusion/: CMakeLists.txt  DataMovement.cpp  Elementwise.cpp  Reduction.cpp  TensorConstructors.cpp  TorchToHFusion.cpp  Uncategorized.cpp  Utils.cpp
bishengir/lib/Conversion/TorchToSymbol/: CMakeLists.txt  TorchToSymbol.cpp
bishengir/lib/Dialect/: CMakeLists.txt
bishengir/lib/Dialect/Analysis/: CMakeLists.txt  DimensionAnalyzer.cpp  DimensionMarker.cpp  Initializer.cpp  ProcessOperations.cpp
bishengir/lib/Dialect/HFusion/: CMakeLists.txt
bishengir/lib/Dialect/HIVM/: CMakeLists.txt
bishengir/lib/Dialect/SCF/: CMakeLists.txt
bishengir/lib/Dialect/Torch/: CMakeLists.txt
bishengir/lib/Dialect/Utils/: CMakeLists.txt  OpInterfaceUtils.cpp  ReachabilityAnalyzer.cpp  UnionFind.cpp  Util.cpp  ValueDependencyAnalyzer.cpp
bishengir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
bishengir/test/CAPI/: CMakeLists.txt  ir.c  pass.c
bishengir/test/Conversion/: lit.local.cfg
bishengir/test/Conversion/ArithToAffine/: arith-to-affine.mlir
bishengir/test/Conversion/ArithToHFusion/: arith-to-hfusion.mlir  conversion-arith-to-hfusion.mlir
bishengir/test/Conversion/GPUToHFusion/: GPUToHFusion.mlir  conversion-gpu-to-hfusion.mlir
bishengir/test/Conversion/HFusionToHIVM/: bitcast.mlir  conversion-hfusion-to-hivm.mlir  gather.mlir  hfusion-to-hivm.mlir  matmul.mlir  reduction.mlir
bishengir/test/Conversion/LinalgToHFusion/: arange.mlir  conversion-linalg-to-hfusion.mlir  linalg-to-hfusion.mlir
bishengir/test/Conversion/LowerMemRefExt/: LowerMemRefExt.mlir
bishengir/test/Conversion/MathToHFusion/: conversion-math-to-hfusion.mlir  math-to-hfusion.mlir
bishengir/test/Conversion/TensorToHFusion/: conversion-tensor-to-hfusion.mlir  tensor-to-hfusion.mlir
bishengir/test/Conversion/TensorToHIVM/: tensor-to-hivm.mlir
bishengir/test/Conversion/TorchToHFusion/: data-movement.mlir  elementwise.mlir  invalid-datamovement.mlir  lit.local.cfg  reduction.mlir  tensor-constructors.mlir  uncategorized.mlir
bishengir/test/Conversion/TorchToSymbol/: torch-to-symbol.mlir
bishengir/test/Dialect/Annotation/: annotation-lowering.mlir  bufferize.mlir  canonicalize.mlir  ops.mlir
bishengir/test/Dialect/Bufferization/: tiling.mlir
bishengir/test/Dialect/HACC/: append-device-spec.mlir  attribute.mlir  llvm-call-external-func.mlir  rename-func.mlir
bishengir/test/Dialect/HFusion/: arange.mlir  bitcast.mlir  bufferize.mlir  canonicalize.mlir  downgrade-fp64.mlir  enable-hfusion-canonicalize-reshape.mlir  gather.mlir  hfusion-adapt-triton-kernel.mlir  hfusion-add-ffts-addr.mlir  hfusion-cache-io-for-return-arg.mlir  hfusion-cache-io.mlir  hfusion-compose-multi-reduce.mlir  hfusion-constantize-tiling-data.mlir  hfusion-decompose-multi.mlir  hfusion-decompose.mlir  hfusion-duplicate-funcs.mlir  hfusion-fold-reshape.mlir  hfusion-inline-brc.mlir  hfusion-load-store.mlir  hfusion-named-structured.mlir  hfusion-normalize-ops-b8.mlir  hfusion-normalize-ops.mlir  hfusion-normalize-slice-ops.mlir  hfusion-pack-tiling-data.mlir  hfusion-pipeline-transpose-collapse.mlir  hfusion-pipeline.mlir  hfusion-propagate-reshape-scf.mlir  hfusion-propagate-shape-2.mlir  hfusion-propagate-shape-hivm.mlir  hfusion-propagate-shape-memref.mlir  hfusion-propagate-shape.mlir  hfusion-recache-io.mlir  hfusion-simplify-ops.mlir  hfusion-single-op-outline.mlir  hfusion-tensor-res-to-out-params.mlir  hfusion-wrap-host-func.mlir  hoist-tensor-empty.mlir  (+10 more)
bishengir/test/ExecutionEngine/: lower-for-cpu-runner.mlir  wrap-kernel-bufferized-no-return.mlir  wrap-kernel-bufferized.mlir  wrap-kernel.mlir
bishengir/test/Integration/: CMakeLists.txt  README.md  README_zh.md  lit.local.cfg
bishengir/test/Pass/: cpu-runner.mlir  pass-manager.mlir  run-reproducer.mlir
bishengir/test/Transforms/: canonicalize-module.mlir
bishengir/test/bishengir-compile/: commandline.mlir  lower-to-llvm-e2e-with-target-tag.mlir  target.mlir  version.mlir
bishengir/test/bishengir-opt/: commandline.mlir  version.mlir
bishengir/test/bishengir-options-tblgen/: compile-configs.td  compile-options.td  invalid-option.td  pass-pipeline-options.td
bishengir/test/bishengir-target-spec-tblgen/: dummy-spec.td  invalid-spec.td
bishengir/test/python/: bishengir_compile.py  lit.local.cfg
bishengir/tools/bishengir-compile/: CMakeLists.txt  bishengir-compile.cpp
bishengir/tools/bishengir-hfusion-ods-gen/: CMakeLists.txt  bishengir-hfusion-ods-yaml-gen.cpp
bishengir/tools/bishengir-lsp-server/: CMakeLists.txt  bishengir-lsp-server.cpp
bishengir/tools/bishengir-opt/: CMakeLists.txt  bishengir-opt.cpp
bishengir/tools/bishengir-options-tblgen/: CMakeLists.txt  CompileConfigGen.cpp  CompileOptionsGen.cpp  ConfigsToOptionsConversionGen.cpp  PassOptionsGen.cpp  bishengir-options-tblgen.cpp
bishengir/tools/bishengir-target-spec-tblgen/: CMakeLists.txt  TargetSpecGen.cpp  bishengir-target-spec-tblgen.cpp
examples/HIVM/VecAdd/: CMakeLists.txt  README.md  README_zh.md  add.mlir  main.cpp
examples/minimal-bishengir-opt/: CMakeLists.txt  bishengir-minimal-opt.cpp
(+791 files in other folders)
