add_subdirectory(ArithToAffine)
add_subdirectory(ArithToHFusion)
add_subdirectory(GPUToHFusion)
add_subdirectory(HFusionToHIVM)
add_subdirectory(LinalgToHFusion)
add_subdirectory(LowerMemRefExt)
add_subdirectory(MathToHFusion)
add_subdirectory(TensorToHFusion)
add_subdirectory(TensorToHIVM)

if(BISHENGIR_ENABLE_TORCH_CONVERSIONS)
  add_subdirectory(TorchToHFusion)
  add_subdirectory(TorchToSymbol)
endif()
