# Copyright (c) 2025 Huawei Technologies Co., Ltd.
#
# This file is a part of the CANN Open Software.
# Licensed under CANN Open Software License Agreement Version 1.0 (the
# "License"). Please refer to the License for details. You may not use this
# file except in compliance with the License. THIS SOFTWARE IS PROVIDED ON AN
# "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS
# FOR A PARTICULAR PURPOSE. See LICENSE in the root of the software repository
# for the full text of the License.

add_executable(hivm-vec-add
  main.cpp
)

target_include_directories(hivm-vec-add PUBLIC
  ${ASCEND_HOME_PATH}/include
  ${ASCEND_HOME_PATH}/include/experiment/msprof
)

target_link_directories(hivm-vec-add PUBLIC
  ${ASCEND_HOME_PATH}/lib64
)

target_link_libraries(hivm-vec-add PUBLIC
  runtime
  ascendcl
)